<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.12</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <java.version>21</java.version>
        <liquibase.version>3.6.3</liquibase.version>
        <lombock.version>1.18.36</lombock.version>
        <querydsl.version>4.2.1</querydsl.version>
        <spring.boot.version>2.1.4.RELEASE</spring.boot.version>
        <auth0.spring.version>1.0.0</auth0.spring.version>
        <jjwt.version>0.9.0</jjwt.version>
    </properties>

    <groupId>by.gp</groupId>
    <artifactId>clinic</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>clinic</name>
    <description>Clinic demo</description>

    <modules>
        <module>backend</module>
    </modules>
</project>
